--- a/index.ipynb
+++ b/index.ipynb
@@ -236,14 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "None # add code here\n",
-    "countries.append()"
+    "countries.append(\"Malta\")"
    ]
   },
   {
