--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = list(set)"
+    "unique_countries = list(set())"
    ]
   },
   {
