automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -433,22 +433,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set())"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina',\n",
+       " 'Finland',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Morocco',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'USA',\n",
+       " 'South Korea',\n",
+       " 'Mexico']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
