--- a/index.ipynb
+++ b/index.ipynb
@@ -480,12 +480,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries)-len\n",
+    "num_of_repeats = len(countries)-len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
